# motd-gen

./: pyproject.toml
config/: motd.json  quotes.json
motd_gen/: __main__.py  colors.py  config.py  engine.py
motd_gen/widgets/: base.py  hostname.py  last_login.py  network.py  os_info.py  processes.py  public_ip.py  quote.py  separator.py  system_stats.py  temperature.py  updates.py  uptime.py  users.py  weather.py
