[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motd-gen"
version = "0.1.0"
description = "A configurable MOTD generator with plugin-based widgets"
requires-python = ">=3.12"
dependencies = [
    "psutil",
    "pyfiglet",
    "requests",
]

[project.scripts]
motd-gen = "motd_gen.__main__:main"

[tool.setuptools.packages.find]
include = ["motd_gen*"]
